fix: resolve SonarCloud issues from Sprint 4 analysis
- AwsConfig: DefaultCredentialsProvider.create() -> .builder().build()
- TextractService: simplify AMOUNT_PATTERN regex (complexity 23->7,
  removes ReDoS risk) + //NOSONAR on nested builders (Minor, intentional)
- S3Service: //NOSONAR on nested builder (Minor, readability preferred)
- OrganizationServiceTest: extract validRequest() before assertThrows
  (one throwing invocation per lambda)
- S3ServiceTest + ContractDocumentControllerTest: new URL() ->
  URI.create().toURL(), remove unused imports MediaType/anyString